# libanvil

./: MAINTAINERS  Makefile.am  autogen.sh  configure.ac
serializer/: Makefile.am
serializer/handlers/: base.vala  boolean.vala  hashtable.vala  int.vala  null.vala  object.vala  string.vala  uint.vala
src/: core.vala  globals.vala  main.vala
